# Blood-Sacs-detector-Microservice

./: .gitignore  README.md  firebase_handler.py  main.py  pyproject.toml  teat.py  test.py
